tests/ok/std-string-from-slice-in.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);

  var text = std::string::from_string(ref mut source, "ari");
  let view = text.as_slice();
  var copied = std::string::from_slice_in(ref mut target, view);

  zone::reset(ref mut source);
  copied.push_in(ref mut target, 33u8);

  let total = copied.len() + copied.capacity() +
    (copied.get(0) as i64) +
    (copied.get(1) as i64) +
    (copied.get(2) as i64) +
    (copied.get(3) as i64);

  zone::destroy(target);
  zone::destroy(source);
  return total % 256;
}
