tests/errors/std-string-copy-to-after-target-reset.ari
fn main() -> i64 {
  var source = zone::create(16);
  var target = zone::create(16);
  let text = std::string::from_string(ref mut source, "ari");
  let copied = std::string::copy_to(text, ref mut target);

  zone::reset(ref mut target);
  return copied.len();
}
